@@ -1,5 +1,12 @@
 package com.mcafirst.infome.Fragments;
 
+import androidx.appcompat.app.AppCompatActivity;
+import androidx.core.view.WindowCompat;
+import android.graphics.Color;
+
+import com.google.android.material.appbar.CollapsingToolbarLayout;
+import com.mcafirst.infome.NotificationReceiver;
+import com.mcafirst.infome.R;
 import android.Manifest;
 import android.annotation.SuppressLint;
 import android.app.AlarmManager;
@@ -10,14 +17,12 @@ import android.content.Context;
 import android.content.Intent;
 import android.content.SharedPreferences;
 import android.content.pm.PackageManager;
+import android.graphics.Color;
 import android.os.Build;
 import android.os.Bundle;
 import android.provider.Settings;
 import android.util.Log;
-import android.view.LayoutInflater;
-import android.view.Menu;
-import android.view.View;
-import android.view.ViewGroup;
+import android.view.*;
 import android.widget.Toast;
 
 import androidx.annotation.NonNull;
@@ -30,61 +35,64 @@ import androidx.recyclerview.widget.RecyclerView;
 import com.google.android.material.appbar.MaterialToolbar;
 import com.google.firebase.auth.FirebaseAuth;
 import com.google.firebase.auth.FirebaseUser;
-import com.google.firebase.database.DataSnapshot;
-import com.google.firebase.database.DatabaseError;
-import com.google.firebase.database.DatabaseReference;
-import com.google.firebase.database.FirebaseDatabase;
-import com.google.firebase.database.ValueEventListener;
+import com.google.firebase.database.*;
 import com.mcafirst.infome.Login_Page;
-import com.mcafirst.infome.NotificationReceiver;
-import com.mcafirst.infome.R;
 import com.mcafirst.infome.TimetableAdapter;
 import com.mcafirst.infome.TimetableEntry;
 import com.mcafirst.infome.TimetableItem;
 import com.mcafirst.infome.UploadTimetableData;
 
-import java.util.ArrayList;
-import java.util.Calendar;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 public class ScheduleFragment extends Fragment {
 
     private RecyclerView recyclerView;
     private TimetableAdapter adapter;
-    private List<TimetableItem> itemList = new ArrayList<>();
+    private final List<TimetableItem> itemList = new ArrayList<>();
     private DatabaseReference ref;
     private String role;
-    private static final boolean DEBUG_MODE = false;
-
-    public ScheduleFragment() {
-        // Required empty public constructor
-    }
+    private static final boolean DEBUG_MODE = false; // false for production
 
     @Override
-    public View onCreateView(LayoutInflater inflater, ViewGroup container,
-                             Bundle savedInstanceState) {
-        return inflater.inflate(R.layout.fragment_shedule, container, false);
+    public void onCreate(@Nullable Bundle savedInstanceState) {
+        super.onCreate(savedInstanceState);
+        setHasOptionsMenu(true);   // fragment will provide its own menu
+    }
+
+    @Nullable
+    @Override
+    public View onCreateView(@NonNull LayoutInflater inflater,
+                             @Nullable ViewGroup container,
+                             @Nullable Bundle savedInstanceState) {
+        return inflater.inflate(R.layout.fragment_schedule, container, false);
     }
 
     @Override
     public void onViewCreated(@NonNull View view, @Nullable Bundle savedInstanceState) {
         super.onViewCreated(view, savedInstanceState);
 
-        // Toolbar
-        MaterialToolbar toolbar = view.findViewById(R.id.mainTopAppBar);
+        // Transparent status bar
         if (getActivity() != null) {
-            ((androidx.appcompat.app.AppCompatActivity) getActivity()).setSupportActionBar(toolbar);
-            setHasOptionsMenu(true);
+            WindowCompat.setDecorFitsSystemWindows(getActivity().getWindow(), false);
+            getActivity().getWindow().setStatusBarColor(Color.TRANSPARENT);
         }
 
-        toolbar.setOnMenuItemClickListener(item -> {
-            int id = item.getItemId();
-            if (id == R.id.action_add_timetable) {
+        // Toolbar
+        MaterialToolbar toolbar = view.findViewById(R.id.mainTopAppBar);
+        if (getActivity() instanceof androidx.appcompat.app.AppCompatActivity) {
+            ((androidx.appcompat.app.AppCompatActivity) getActivity()).setSupportActionBar(toolbar);
+        }
+
+        // CollapsingToolbar title behavior
+        CollapsingToolbarLayout collapsingToolbar = view.findViewById(R.id.collapsingToolbar);
+        collapsingToolbar.setTitleEnabled(false);
+
+             toolbar.setOnMenuItemClickListener(item -> {
+            int itemId = item.getItemId();
+            if (itemId == R.id.action_add_timetable) {
                 startActivity(new Intent(requireContext(), UploadTimetableData.class));
                 return true;
-            } else if (id == R.id.action_sign_out) {
+            } else if (itemId == R.id.action_sign_out) {
                 FirebaseAuth.getInstance().signOut();
                 Intent loginIntent = new Intent(requireContext(), Login_Page.class);
                 loginIntent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK | Intent.FLAG_ACTIVITY_CLEAR_TASK);
@@ -95,19 +103,18 @@ public class ScheduleFragment extends Fragment {
             return false;
         });
 
-        // Firebase user
-        FirebaseUser currentUser = FirebaseAuth.getInstance().getCurrentUser();
-        if (currentUser != null) {
-            DatabaseReference userRef = FirebaseDatabase.getInstance()
-                    .getReference("MasterData")
-                    .child("registeredUsers")
-                    .child(currentUser.getUid());
+        // RecyclerView
+        recyclerView = view.findViewById(R.id.recyclerTimetable);
+        recyclerView.setLayoutManager(new LinearLayoutManager(requireContext()));
+        adapter = new TimetableAdapter(itemList);
+        recyclerView.setAdapter(adapter);
 
-            userRef.get().addOnSuccessListener(snapshot -> {
-                role = snapshot.child("role").getValue(String.class);
-                if (getActivity() != null) getActivity().invalidateOptionsMenu();
-            });
-        }
+        // Firebase reference
+        ref = FirebaseDatabase.getInstance().getReference("Timetable");
+        ref.keepSynced(true);
+
+        // Fetch role
+        fetchUserRole();
 
         // Notification channel
         if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.O) {
@@ -117,43 +124,50 @@ public class ScheduleFragment extends Fragment {
                     NotificationManager.IMPORTANCE_HIGH
             );
             NotificationManager manager = requireContext().getSystemService(NotificationManager.class);
-            if (manager != null) manager.createNotificationChannel(channel);
+            manager.createNotificationChannel(channel);
         }
 
-        // Notification permission
+        // Notification permission (Android 13+)
         if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
-            if (ActivityCompat.checkSelfPermission(requireContext(), Manifest.permission.POST_NOTIFICATIONS)
-                    != PackageManager.PERMISSION_GRANTED) {
+            if (ActivityCompat.checkSelfPermission(requireContext(),
+                    Manifest.permission.POST_NOTIFICATIONS) != PackageManager.PERMISSION_GRANTED) {
                 requestPermissions(new String[]{Manifest.permission.POST_NOTIFICATIONS}, 101);
             }
         }
 
-        // RecyclerView
-        recyclerView = view.findViewById(R.id.recyclerTimetable);
-        recyclerView.setLayoutManager(new LinearLayoutManager(requireContext()));
-        adapter = new TimetableAdapter(itemList);
-        recyclerView.setAdapter(adapter);
-
-        // Firebase ref
-        ref = FirebaseDatabase.getInstance().getReference("Timetable");
-        ref.keepSynced(true);
-
+        // Fetch data and schedule notifications
         fetchData();
         rescheduleNotifications();
 
         // Exact alarm permission (Android 12+)
         if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.S) {
             AlarmManager alarmManager = (AlarmManager) requireContext().getSystemService(Context.ALARM_SERVICE);
-            if (alarmManager != null && !alarmManager.canScheduleExactAlarms()) {
+            if (!alarmManager.canScheduleExactAlarms()) {
                 Intent intent = new Intent(Settings.ACTION_REQUEST_SCHEDULE_EXACT_ALARM);
                 startActivity(intent);
             }
         }
 
+        // Switch from debug to production
         if (!DEBUG_MODE) {
             cancelDebugAlarms();
             rescheduleNotifications();
         }
+    }
+
+    private void fetchUserRole() {
+        FirebaseUser currentUser = FirebaseAuth.getInstance().getCurrentUser();
+        if (currentUser == null) return;
+
+        DatabaseReference userRef = FirebaseDatabase.getInstance()
+                .getReference("MasterData")
+                .child("registeredUsers")
+                .child(currentUser.getUid());
+
+        userRef.get().addOnSuccessListener(snapshot -> {
+            role = snapshot.child("role").getValue(String.class);
+            requireActivity().invalidateOptionsMenu();
+        });
     }
 
     private void cancelDebugAlarms() {
@@ -175,7 +189,6 @@ public class ScheduleFragment extends Fragment {
                 Log.d("AlarmScheduler", "[CANCELLED] " + key);
             }
         }
-
         prefs.edit().putStringSet("scheduled_classes", new HashSet<>()).apply();
     }
 
@@ -183,7 +196,6 @@ public class ScheduleFragment extends Fragment {
         SharedPreferences prefs = requireContext().getSharedPreferences("app_prefs", Context.MODE_PRIVATE);
         AlarmManager alarmManager = (AlarmManager) requireContext().getSystemService(Context.ALARM_SERVICE);
 
-        // Cancel old alarms
         for (String key : prefs.getStringSet("scheduled_classes", new HashSet<>())) {
             Intent intent = new Intent(requireContext(), NotificationReceiver.class);
             PendingIntent pendingIntent = PendingIntent.getBroadcast(
@@ -192,11 +204,10 @@ public class ScheduleFragment extends Fragment {
                     intent,
                     PendingIntent.FLAG_NO_CREATE | PendingIntent.FLAG_IMMUTABLE
             );
-            if (pendingIntent != null && alarmManager != null) {
+            if (pendingIntent != null) {
                 alarmManager.cancel(pendingIntent);
             }
         }
-
         prefs.edit().putStringSet("scheduled_classes", new HashSet<>()).apply();
 
         if (DEBUG_MODE) {
@@ -214,7 +225,6 @@ public class ScheduleFragment extends Fragment {
                         String period = periodSnapshot.getKey();
                         String subject = periodSnapshot.child("subjectName").getValue(String.class);
                         String room = periodSnapshot.child("roomNumber").getValue(String.class);
-
                         if (period != null && subject != null && room != null) {
                             String startTime = period.split("-")[0].trim();
                             scheduleWeeklyNotification(dayName, startTime, subject, room);
@@ -232,7 +242,10 @@ public class ScheduleFragment extends Fragment {
         });
     }
 
-    private void scheduleWeeklyNotification(String dayName, String startTime, String subject, String room) {
+    private void scheduleWeeklyNotification(String dayName,
+                                            String startTime,
+                                            String subject,
+                                            String room) {
         AlarmManager alarmManager = (AlarmManager) requireContext().getSystemService(Context.ALARM_SERVICE);
 
         Intent intent = new Intent(requireContext(), NotificationReceiver.class);
@@ -242,7 +255,6 @@ public class ScheduleFragment extends Fragment {
         intent.putExtra("dayName", dayName);
 
         int requestCode = (subject + room + startTime + dayName).hashCode();
-
         PendingIntent pendingIntent = PendingIntent.getBroadcast(
                 requireContext(),
                 requestCode,
@@ -250,16 +262,7 @@ public class ScheduleFragment extends Fragment {
                 PendingIntent.FLAG_UPDATE_CURRENT | PendingIntent.FLAG_IMMUTABLE
         );
 
-        if (alarmManager == null) return;
-
         alarmManager.cancel(pendingIntent);
-
-        if (DEBUG_MODE) {
-            Calendar testCalendar = Calendar.getInstance();
-            testCalendar.add(Calendar.SECOND, 30);
-            alarmManager.setExact(AlarmManager.RTC_WAKEUP, testCalendar.getTimeInMillis(), pendingIntent);
-            return;
-        }
 
         int hour = Integer.parseInt(startTime.split(":")[0]);
         int minute = Integer.parseInt(startTime.split(":")[1]);
@@ -281,6 +284,7 @@ public class ScheduleFragment extends Fragment {
                 AlarmManager.INTERVAL_DAY * 7,
                 pendingIntent
         );
+        Log.d("AlarmScheduler", "Scheduled: " + subject + " on " + dayName);
     }
 
     private int getDayOfWeek(String dayName) {
@@ -302,24 +306,20 @@ public class ScheduleFragment extends Fragment {
             @Override
             public void onDataChange(@NonNull DataSnapshot snapshot) {
                 itemList.clear();
-
-                List<String> dayOrder = List.of("Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday");
+                List<String> dayOrder = Arrays.asList("Monday","Tuesday","Wednesday","Thursday","Friday","Saturday","Sunday");
                 List<String> availableDays = new ArrayList<>();
                 for (DataSnapshot daySnap : snapshot.getChildren()) {
                     availableDays.add(daySnap.getKey());
                 }
-
-                availableDays.sort((d1, d2) -> Integer.compare(dayOrder.indexOf(d1), dayOrder.indexOf(d2)));
+                availableDays.sort(Comparator.comparingInt(dayOrder::indexOf));
 
                 for (String day : availableDays) {
                     DataSnapshot daySnap = snapshot.child(day);
                     itemList.add(new TimetableItem(TimetableItem.TYPE_DAY, day));
 
                     List<DataSnapshot> periods = new ArrayList<>();
-                    for (DataSnapshot timeSnap : daySnap.getChildren()) {
-                        periods.add(timeSnap);
-                    }
-                    periods.sort((a, b) -> a.getKey().compareTo(b.getKey()));
+                    for (DataSnapshot timeSnap : daySnap.getChildren()) periods.add(timeSnap);
+                    periods.sort(Comparator.comparing(DataSnapshot::getKey));
 
                     for (DataSnapshot timeSnap : periods) {
                         String timePeriod = timeSnap.getKey();
@@ -338,14 +338,14 @@ public class ScheduleFragment extends Fragment {
     }
 
     @Override
-    public void onPrepareOptionsMenu(@NonNull Menu menu) {
-        super.onPrepareOptionsMenu(menu);
-
-        SharedPreferences prefs = requireContext().getSharedPreferences("app_prefs", Context.MODE_PRIVATE);
-        String rolePref = prefs.getString("user_role", "");
-
+    public void onCreateOptionsMenu(@NonNull Menu menu, @NonNull MenuInflater inflater) {
+        inflater.inflate(R.menu.top_app_bar_menu, menu);
+        String rolePref = requireContext()
+                .getSharedPreferences("app_prefs", Context.MODE_PRIVATE)
+                .getString("user_role", "");
         if ("student".equalsIgnoreCase(rolePref)) {
             menu.findItem(R.id.action_add_timetable).setVisible(false);
         }
+        super.onCreateOptionsMenu(menu, inflater);
     }
 }
